# rust_backend_learning

axum_getting_started/: Cargo.toml  Readme.md
axum_getting_started/src/: main.rs
backend-shuttle/: Cargo.toml  Readme.md
demo-rust-axum/: README.md
error_handling/: README.md
http_request/: Cargo.toml
introduction_axum/: Cargo.toml
introduction_axum/src/: lib.rs  main.rs  routes.rs
jwt_actix/: Cargo.toml
jwt_actix/src/: main.rs
jwt_actix/src/middlewares/: protect.rs
jwt_actix/src/scopes/: user.rs
jwt_axum_actix/: Cargo.toml
jwt_axum_actix/actix-auth/: Cargo.toml
jwt_axum_actix/axum-auth/: Cargo.toml
jwt_axum_actix/jwt-lib/: Cargo.toml
my-redis/: Cargo.toml  README.md
my-redis/examples/: hello-redis.rs
my-redis/examples/channels/: client.rs  server.rs
rust-blog-example/: Cargo.toml  Readme.md
rust-blog-example/src/: main.rs
rust_aws/: Cargo.toml
rust_on_nails/.devcontainer/: docker-compose.yml
rustflix/: Cargo.toml
rustflix/src/: args.rs  db.rs
rustflix/src/ops/: user_ops.rs  video_ops.rs  view_ops.rs
saas/: package-lock.json  package.json
saas/backend/: Cargo.toml
saas/backend/src/: auth.rs  customers.rs  deals.rs  mail.rs  main.rs  payments.rs  router.rs
sqlx/: Cargo.toml
sqlx/scripts/: init.sql
sqlx/src/: main.rs  restclient.txt
tauri-awesome-app/: package.json
tauri-awesome-app/src-tauri/: Tauri.toml
tauri-awesome-app/src-ui/src/view/: app-v.ts
uuid_versions/: Cargo.toml  README.md  docker-compose.yml
uuid_versions/postgresql/: init.sql  tables.sql
uuid_versions/src/: main.rs
web_app/: Cargo.toml  README.md
web_app/.cargo/: config.toml
web_app/crates/libs/lib-auth/: lib.rs
web_app/crates/libs/lib-core/src/ctx/: error.rs
web_app/crates/libs/lib-utils/: Cargo.toml
web_app/crates/libs/lib-utils/src/: envs.rs
web_app/crates/services/web-server/: Cargo.toml
web_app/examples/: quicke_dev.rs
web_app/src/: error.rs  main.rs  model.rs
web_app/src/web/: mod.rs  mw_auth.rs  routes_login.rs  routes_tickets.rs
web_app/tests/: quick_dev.rs  reqwest_wrapper.rs
zero_to_prod/: Cargo.toml
zero_to_prod/src/: .env  docker-compose.yml  lib.rs  main.rs
zero_to_prod/tests/: health_check.rs
