[package]
name = "rust_aws"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.5.4"
aws-sdk-dynamodb = "1.39.1"
aws-sdk-s3 = "1.42.0"
lambda_runtime = "0.13.0"
log = "0.4.22"
serde = "1.0.205"
serde_derive = "1.0.205"
serde_json = "1.0.122"
simple_logger = "5.0.0"
tokio = { version = "1.39.2", features = ["full"] }
uuid = { version = "1.10.0", features = ["v4"] }
