[workspace.lints.rust]
unsafe_code = "forbid"

[workspace]
resolver = "2"
members = [
    # -- Application Libraries
    "crates/libs/lib-utils",      # e.g., base64, time.
    "crates/libs/lib-rpc-core",   # e.g., core rpc utils (using rpc-router crate)
    "crates/libs/lib-rpc-app",    # e.g., rpc handlers for app (using rpc-router crate)
    "crates/libs/lib-auth",       # e.g., for pwd, token.
    "crates/libs/lib-core",       # e.g., model, ctx, config.
    "crates/libs/lib-web",        # e.g., logging, common middleware etc

    # -- Application Services
    "crates/services/web-server",

    # -- Tools
    "crates/tools/gen-key", 
]


[workspace.dependencies]
serde_with = {version = "3", features = ["time_0_3"] }
modql = { version = "=0.4.0-rc.8", features = ["with-sea-query"]}
rpc-router = { version = "=0.1.3" } 
time = {version = "0.3", features = ["formatting", "parsing", "serde"]}
derive_more = {version = "1.0.0-beta", features = ["from", "display"] }
